--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,6 @@
     "16": "assests/favicon-16x16.png",
     "32": "assests/favicon-32x32.png",
     "192": "assests/android-chrome-192x192.png"
-  }
+  },
+  "host_permissions": ["<all_urls>"]
 }
